# PogVM

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yaml  cpplint.yaml
docs/: Documentation.md  PogVM  Resources.md
src/: PogCPU  ansi.hpp  audit.cpp  audit.hpp  core.cpp  defs.cpp  defs.hpp  kernel.cpp  kvmapi.cpp  mainframe.cpp  vcore.cpp  vcore.hpp
src/CPU/: flags.hpp  instructions.cpp  memory.hpp  opcodes.hpp  registers.hpp
src/RAM/: memory.cpp
src/cpu/: flags.hpp  memory.hpp  opcodes.hpp  registers.hpp  stack.hpp
src/cycle/: README.md  decode.cpp  decode.hpp  execute.cpp  execute.hpp  fetch.cpp  fetch.hpp  test.asm  test2.asm
src/instructions/: 80186-80188.hpp  8086-8088.hpp  AAA.cpp  CLC.cpp  CLD.cpp  CLI.cpp  Pentium.hpp  README.md  constructor.cpp  handler.cpp  testing.hpp
src/instructions/8086-8088/: AAA.cpp  AAD.cpp  AAM.cpp  AAS.cpp  ADC.cpp  ADD.cpp  AND.cpp  CALL.cpp  CLC.cpp  CLD.cpp  CLI.cpp  CMP.cpp
src/tests/: assembly.hpp
src/tests/C/: add.c  count.c  helloworld.c  loop.c  set.c
src/tests/C/C-to-assembly/: count.asm  helloworld.s
src/tests/C/at&t-assembly/: loop.asm
src/tests/C/intel-assembly/: loop.asm
src/tests/assembly/at&t/: add.s  set.s
src/tests/assembly/intel/: add.s  helloworld.asm  set.asm
src/tests/elf/: add  count  helloworld  loop  set
src/tests/intel-assembly/: count.asm  helloworld.asm
